添加错误样式

--- a/src/style.styl
+++ b/src/style.styl
@@ -14,9 +14,17 @@
     white-space: nowrap;
     display inline-block
     .err-tip-msg {
+      background url("bang.png") no-repeat
+      padding-left: 20px;
+      background-size: contain;
       display: inline-block;
       font-size: 12px;
       line-height: 16px;
+    }
+    .err-tip-img {
+      vertical-align: sub;
+      padding-right: 3px;
+      height: 15px;
     }
   }
 }
